--- a/pumpkinsstyle.css
+++ b/pumpkinsstyle.css
@@ -41,6 +41,24 @@ body{
 	overflow: hidden;
 	transition: 0.5s ease-in-out max-height;
 }
+.search{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 3rem;
+}
+
+.search i{
+	margin-right: 1rem;
+}
+
+.search input{
+	width: 100%;
+	border-radius: 1rem;
+	border: 2px solid #FF9945
+}
+
+
 
 .nav-btn{
 	padding: 0.15rem 0.75rem;
