--- a/pumpkinsstyle.css
+++ b/pumpkinsstyle.css
@@ -62,6 +62,7 @@ header{
 }
 .search i{ /*search icon*/
 	margin-right: 1rem;
+	margin-left: 1rem;
 }
 .search input{
 	width: 100%;
@@ -187,11 +188,12 @@ header{
 }
 
 .page-content{
-	padding: 
+	padding: 1em;
 	margin: auto;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	gap: auto 15px;
+	grid-template-columns: 1fr;
+	gap: 1em;
+	justify-items: center;
 }
 
 .pumpkin-card{
@@ -235,14 +237,16 @@ footer{
 	position: sticky;
 }
 
-@media screen and (min-width: 1500px){
+@media screen and (min-width: 1300px){
 	.nav-btn{
 		display: none;
 	}
 	.navlink{
 		padding: 10px 15px;
+		margin-right: 1em;
 		border: none;
 		border-radius: 3rem;
+		white-space: nowrap;
 	}
 	.navlink:first-child{
 		border: none;
@@ -253,7 +257,6 @@ footer{
 		padding-left: 30px;
 		padding-right: 30px;
 		overflow: visible;
-		max-height: auto;
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
@@ -262,10 +265,21 @@ footer{
 	.search{
 		background: none;
 	}
+	.page-content{
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-auto-flow: row;
+	}
 } 
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 700px){
 	.homepage-content{
 		max-width: 700px;
+	}
+
+	.page-content{
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+
 	}
 }
