--- a/pumpkinsstyle.css
+++ b/pumpkinsstyle.css
@@ -191,8 +191,8 @@ header{
 	padding: 1em;
 	margin: auto;
 	display: grid;
-	grid-template-columns: 1fr;
-	gap: 1em;
+	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+	row-gap: 1rem;
 	justify-items: center;
 }
 
@@ -203,7 +203,6 @@ header{
 	width: 340px;
 	height: auto;
 	max-height: 500px;
-	border: 2px solid blue;
 	text-align: center;
 }
 
@@ -211,8 +210,13 @@ header{
 	width: 100%;
 	max-width: 300px;
 	height: auto;
-	margin: auto;
 	padding-top: 1rem;
+	transition: transform 0.3s;
+}
+
+.pumpkin-img:hover{
+	transform: scale(1.1);
+	transition: transform 0.3s;
 }
 
 .pumpkin-card p{
@@ -237,7 +241,7 @@ footer{
 	position: sticky;
 }
 
-@media screen and (min-width: 1300px){
+@media screen and (min-width: 1500px){
 	.nav-btn{
 		display: none;
 	}
@@ -265,11 +269,6 @@ footer{
 	.search{
 		background: none;
 	}
-	.page-content{
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr 1fr;
-		grid-auto-flow: row;
-	}
 } 
 
 @media screen and (min-width: 700px){
@@ -277,9 +276,4 @@ footer{
 		max-width: 700px;
 	}
 
-	.page-content{
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-
-	}
 }
